[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endstone-jwessentials"
version = "1.0.0"
description = "JWEssentials - Essential commands plugin for EndstoneMC servers, ported from EssentialsX"
readme = "README.md"
license = "MIT"
authors = [{ name = "JWDev" }]
requires-python = ">=3.12"
dependencies = ["endstone>=0.10.0", "aiosqlite>=0.20.0", "pyyaml>=6.0"]

[project.entry-points."endstone"]
jwessentials = "jwessentials.main:JWEssentials"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jwessentials = ["resources/*.yml"]
